--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
+    
 }
 h1{
     font-size: 50px;
@@ -21,4 +23,27 @@ p{
 }
 .half-width img{
     width: 100%;
+}
+.section-height{
+      background-image: url(img/top-banner.png);
+      height: 500px;
+      background-repeat: no-repeat;
+}
+.link-button{
+    text-decoration: none;
+    color: black;
+    border: 5px orange solid;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: orange;
+    margin-top: 20px;
+}
+.link-button:hover{
+    text-decoration: none;
+    color: white;
+    border: 5px orange solid;
+    padding: 5px;
+    border-radius: 20px;
+    background-color: red;
+    
 }
