--- a/style.css
+++ b/style.css
@@ -51,4 +51,29 @@ p{
     background-image: url(img/dream-bg.png); 
     background-repeat: no-repeat;
     background-position: right;
+    height: 700px;
+    
 }
+.Experiance-area{
+    background-image: url(img/exp-bg.png);
+    background-position: left;
+    background-repeat: no-repeat;
+    height: 700px;
+ 
+    
+}
+.single-ex{
+    box-shadow: 10px 10px 40px gray;
+    height: 50%;
+}
+#baby-devoloper{
+    border-left: 5px solid;
+    background-image: linear-gradient(180deg lightsalmon tomato);
+    border-image-slice: 1;
+}
+#stack-devoloper{
+    border-left: 5px solid;
+    background-image: linear-gradient(180deg blue cyan);
+    border-image-slice: 1;
+}
+
