--- a/style.css
+++ b/style.css
@@ -68,12 +68,17 @@ p{
 }
 #baby-devoloper{
     border-left: 5px solid;
-    background-image: linear-gradient(180deg lightsalmon tomato);
+    border-image: linear-gradient(180deg,blue ,cyan);
     border-image-slice: 1;
 }
 #stack-devoloper{
     border-left: 5px solid;
-    background-image: linear-gradient(180deg blue cyan);
+    border-image: linear-gradient(180deg,blue ,cyan);
     border-image-slice: 1;
+}
+.text-color{
+    background-color: rgb(79, 204, 162);
+    margin-left: 50px;
+
 }
 
